<resources>
    <string name="app_name">Smart_parking_system</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>



    <string name="welcome">AndroidBegin - Android Button Click New Activity Example</string>
    <string name="menu_settings">Settings</string>
    <string name="Button">Button</string>
    <string name="enter">Enter</string>
    <string name="car">Car</string>
    <string name="camera">Camera</string>
    <string name="view">View</string>
    <string name="view_the_plot">View the Plot</string>
    <string name="click_image">Click Image</string>
    <string name="button5">Button</string>
    <string name="button4">Button</string>
    <string name="login">Login</string>
    <string name="username">Email</string>
    <string name="todo">TODO</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="contact">Contact</string>
    <string name="address">Address</string>
    <string name="id">Id</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="trial">select slot</string>
    <string name="sign_out">Sign out</string>
</resources>
