<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".startpage.signup"
    android:orientation="vertical">


    <ImageView
    android:id="@+id/imageView2"
    android:layout_width="match_parent"
    android:layout_height="150dp"

    android:contentDescription="@string/todo"
    app:srcCompat="@drawable/bg13" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        tools:ignore="LabelFor">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:drawableLeft="@drawable/ic_action_prsn"
            android:drawableStart="@drawable/ic_action_prsn"

            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="5dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        tools:ignore="LabelFor">

        <android.support.design.widget.TextInputEditText


            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:drawableLeft="@drawable/ic_action_loc"
            android:drawableStart="@drawable/ic_action_loc"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:padding="5dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        tools:ignore="LabelFor">

        <android.support.design.widget.TextInputEditText


            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@android:string/emptyPhoneNumber"

            android:drawableLeft="@drawable/phone"
            android:drawableStart="@drawable/phone"
            android:fontFamily="sans-serif"
            android:hint="@string/contact"
            android:inputType="phone"
            android:padding="5dp"
            tools:ignore="ContentDescription,UnusedAttribute" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        tools:ignore="LabelFor">

        <android.support.design.widget.TextInputEditText


            android:id="@+id/etId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:drawableLeft="@drawable/ic_action_id"
            android:drawableStart="@drawable/ic_action_id"
            android:hint="@string/id"
            android:inputType="number"
            android:padding="5dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        tools:ignore="LabelFor">

        <android.support.design.widget.TextInputEditText


            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:drawableLeft="@drawable/ic_action_name"
            android:drawableStart="@drawable/ic_action_name"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:padding="5dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        tools:ignore="LabelFor">

        <android.support.design.widget.TextInputEditText


            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:drawableLeft="@drawable/ic_action_pass"
            android:drawableStart="@drawable/ic_action_pass"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btSignUp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:background="#0000ff"
        android:focusable="true"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</LinearLayout>