<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".startpage.signin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="55dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/bg13" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etEmail1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_name"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_action_name"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPass1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_action_pass"
                android:drawablePadding="12dp"
                android:drawableStart="@drawable/ic_action_pass"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="18sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btSignIn1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:background="#0000ff"
            android:clickable="true"
            android:focusable="true"
            android:text="Sign In"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>


</RelativeLayout>